apps/production/immich/immich-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 3
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: artifactory.local.hejsan.xyz/docker/immich-app/immich-server:v1.140.0
          volumeMounts:
            - name: shared-storage
              subPath: files/immich/data
              mountPath: /data
          ports:
            - containerPort: 2283
          resources:
            limits:
              memory: 2Gi
              cpu: "1"
            requests:
              memory: 1Gi
              cpu: "0.1"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: immich-shared-nfs-pvc
