apps/production/immich/immich-server/stateful-set.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: artifactory.local.hejsan.xyz/docker/immich-app/immich-server:v1.140.0@sha256:761a60e899bcc00e86018085babf21f8dd68e38f5b48d3e817271f1f74705a16
          volumeMounts:
            - name: shared-storage
              subPath: files/immich/data
              mountPath: /data
          ports:
            - containerPort: 2283
          resources:
            limits:
              memory: 500Mi
              cpu: "1"
            requests:
              memory: 320Mi
              cpu: "0.1"
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: immich-shared-nfs-pvc
