apps/production/immich/immich-server/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-server

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: immich-server
          port: http

  tls:
    secretName: local-hejsan-xyz-tls
